//tracker.nci.nih.gov/browse/OCEPROJECT-3729 - fixed spacing on CTHP Research Cards to match Treatment Cards

--- a/CancerGov/_src/StyleSheets/_cthp.scss
+++ b/CancerGov/_src/StyleSheets/_cthp.scss
@@ -82,9 +82,13 @@ margin-left: -0.9375em; margin-right: -0.9375em; margin-top: 30px;
 	list-style-type: none;
 	padding-left: 0.9375em;
 }
-.cthp-research .cardBody p a {
-	display: block;
-	padding-left: 0.9375em;
+.cthp-research .cardBody p {
+	margin-top: 2px; 
+	margin-bottom: 2px;
+	a {
+		display: block;
+		padding-left: 0.9375em;
+	}
 }
 .moreInfo li:before, .cthp-treatment .cardBody ul li:before, .cthp-research .cardBody p a:before {
 	content: "\2022";
